--- a/index.html
+++ b/index.html
@@ -3,37 +3,44 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Bityours.com | Dashboard Green&Gain</title>
-    <script src="https://cdn.tailwindcss.com"></script>
+    <title>Domini - Green&Gain Strategy</title>
     <style>
-        @import url('https://fonts.googleapis.com/css2?family=Plus+Jakarta+Sans:wght@400;600;800&display=swap');
-        body { 
-            background: radial-gradient(circle at top left, #1e293b, #0f172a); 
-            color: #f8fafc; 
-            font-family: 'Plus Jakarta Sans', sans-serif; 
-            min-height: 100vh;
-        }
-        .glass { 
-            background: rgba(30, 41, 59, 0.7); 
-            backdrop-filter: blur(12px); 
-            border: 1px solid rgba(255, 255, 255, 0.1); 
-            border-radius: 24px; 
-        }
-        .progress-bar { height: 8px; border-radius: 4px; background: #334155; overflow: hidden; }
-        .fill-growth { background: #22c55e; }
-        .fill-defense { background: #3b82f6; }
-        .fill-dividend { background: #eab308; }
+        body { font-family: sans-serif; line-height: 1.6; text-align: center; padding: 20px; background-color: #f4f7f6; color: #333; }
+        .container { max-width: 600px; margin: auto; background: white; padding: 30px; border-radius: 15px; box-shadow: 0 4px 15px rgba(0,0,0,0.1); }
+        h1 { color: #2e7d32; }
+        .stats { display: flex; justify-content: space-around; margin: 20px 0; padding: 15px; background: #e8f5e9; border-radius: 10px; }
+        .stat-item { font-weight: bold; }
+        .btn-buy { display: inline-block; background-color: #2e7d32; color: white; padding: 15px 30px; text-decoration: none; border-radius: 30px; font-weight: bold; margin-top: 25px; transition: transform 0.2s; }
+        .btn-buy:hover { transform: scale(1.05); background-color: #1b5e20; }
+        .footer { margin-top: 40px; font-size: 0.8em; color: #777; }
     </style>
 </head>
-<body class="p-4 md:p-8">
-    <div class="max-w-2xl mx-auto space-y-6">
-        
-        <!-- Intestazione -->
-        <header class="flex justify-between items-center px-2">
-            <div>
-                <h1 class="text-3xl font-extrabold tracking-tight text-white italic">BITYOURS<span class="text-green-500">.COM</span></h1>
-                <p class="text-slate-400 text-xs font-semibold uppercase tracking-widest">Ultimate Bond/world Plan</p>
-            </div>
+<body>
+
+<div class="container">
+    <h1>Green&Gain</h1>
+    <p>Target Strategy: <strong>Ultimate Bond/world</strong></p>
+    
+    <div class="stats">
+        <div class="stat-item">55%<br>Growth</div>
+        <div class="stat-item">30%<br>Defense</div>
+        <div class="stat-item">15%<br>Dividend</div>
+    </div>
+
+    <p>Questo spazio ospita la strategia di crescita sostenibile <strong>Green Plus</strong>. <br> 
+    Il dominio è attualmente disponibile per l'acquisto.</p>
+
+    <a href="mailto:TUAMAIL@ESEMPIO.COM?subject=Interesse per il dominio" class="btn-buy">
+        CONTATTA PER ACQUISTARE IL DOMINIO
+    </a>
+
+    <div class="footer">
+        © 2026 Sonny Lo Presti - Green&Gain Project
+    </div>
+</div>
+
+</body>
+</html>
             <div class="text-right">
                 <span class="px-3 py-1 rounded-full bg-green-500/10 text-green-400 text-[10px] font-bold border border-green-500/20">
                     AMMINISTRATO 2026
