--- a/index.html
+++ b/index.html
@@ -30,9 +30,19 @@
     <p>Questo spazio ospita la strategia di crescita sostenibile <strong>Green Plus</strong>. <br> 
     Il dominio è attualmente disponibile per l'acquisto.</p>
 
-    <a href="mailto:TUAMAIL@ESEMPIO.COM?subject=Interesse per il dominio" class="btn-buy">
-        CONTATTA PER ACQUISTARE IL DOMINIO
-    </a>
+        <div style="margin-top: 30px; padding: 20px; border: 2px solid #2e7d32; border-radius: 15px; background: #fff; box-shadow: 0 4px 15px rgba(0,0,0,0.1);">
+        <h3 style="color: #333; margin-top: 0;">Ottieni questo dominio</h3>
+        <p style="font-size: 1.2em; color: #2e7d32; font-weight: bold; margin-bottom: 5px;">$ 1.300,00</p>
+        <p style="font-size: 0.9em; color: #666; margin-bottom: 20px;">Oppure leasing con riscatto a <strong>$ 130,00/mese</strong></p>
+        
+        <a href="https://it.godaddy.com/domain-find?checkAvail=1&domainToCheck=bityours.com" class="btn-buy" style="background-color: #000; width: 90%; margin-bottom: 12px; display: inline-block; color: white; text-decoration: none; padding: 12px 0; border-radius: 5px;">
+            ACQUISTA ORA
+        </a>
+
+        <a href="https://it.godaddy.com/domain-find?checkAvail=1&domainToCheck=bityours.com" class="btn-buy" style="background-color: #fff; color: #000; border: 2px solid #000; width: 90%; display: inline-block; text-decoration: none; padding: 10px 0; border-radius: 5px;">
+            FAI UN'OFFERTA
+        </a>
+    </div>
 
     <div class="footer">
         © 2026 Sonny Lo Presti - Green&Gain Project
