--- a/index.html
+++ b/index.html
@@ -16,6 +16,8 @@
         }
         .modal { display: none; position: fixed; inset: 0; background: rgba(0,0,0,0.9); z-index: 50; align-items: center; justify-content: center; padding: 20px; }
         .modal.active { display: flex; }
+        /* Forza il bianco per il footer */
+        .footer-text { color: #ffffff !important; opacity: 1 !important; }
     </style>
 </head>
 <body class="p-4 md:p-8">
@@ -25,14 +27,104 @@
         <button onclick="openModal()" class="gold-button w-full py-5 px-6 rounded-3xl flex justify-between items-center text-white border border-yellow-300/30 shadow-2xl">
             <div class="flex flex-col text-left">
                 <span class="text-[10px] uppercase font-extrabold opacity-90 tracking-widest leading-none">Premium Asset</span>
-                <span class="text-xl font-black tracking-tighter uppercase">Acquista Bityours.com</span>
+                <span class="text-xl font-black tracking-tighter uppercase">Buy Bityours.com</span>
             </div>
             <div class="bg-white/20 p-2 rounded-full">
                 <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor">
-                    <path stroke-linecap="round" stroke-linejoin="round" stroke-width="3" d="M12 8v13m0-13V6a2 2 0 112 2h-2zm0 0V5a2 2 0 10-2 2h2z" />
+                    <path stroke-linecap="round" stroke-linejoin="round" stroke-width="3" d="M13 7l5 5m0 0l-5 5m5-5H6" />
                 </svg>
             </div>
         </button>
+
+        <!-- Titolo -->
+        <div class="px-2 space-y-2">
+            <h1 class="text-4xl font-black italic tracking-tighter uppercase text-white leading-none">BITYOURS<span class="text-green-500">.COM</span></h1>
+            <p class="text-[13px] text-slate-300 leading-relaxed font-medium italic">
+                Il punto di incontro tra <span class="text-green-400 font-bold">finanza digitale</span> e strategie di investimento a lungo termine. Sviluppato per tracciare il piano <span class="text-white font-bold underline decoration-green-500 uppercase">Ultimate Bond/world</span>.
+            </p>
+        </div>
+
+        <!-- Capitale -->
+        <div class="glass p-8 text-center border-b-4 border-b-green-500 shadow-2xl flex flex-col items-center">
+            <h3 class="text-slate-400 text-[10px] font-bold uppercase tracking-[0.3em] mb-1">Capitale Investito</h3>
+            <p class="text-5xl font-black text-white leading-tight">€ 426,50</p>
+            <div class="flex justify-center gap-4 mt-3 text-[10px] font-bold text-slate-300 uppercase tracking-tighter">
+                <span>Credem: € 200</span>
+                <span>•</span>
+                <span>Trade Republic: € 226,50</span>
+            </div>
+        </div>
+
+        <!-- Asset Allocation -->
+        <div class="glass p-6 space-y-4">
+            <div class="flex justify-between items-end border-b border-white/5 pb-2">
+                <h2 class="text-xs font-bold text-slate-100 uppercase tracking-widest italic">Target Green&Gain (55/30/15)</h2>
+            </div>
+            
+            <div class="space-y-4">
+                <div>
+                    <div class="flex justify-between text-[11px] mb-1 font-bold uppercase text-green-400">
+                        <span>Crescita</span>
+                        <span>18%</span>
+                    </div>
+                    <div class="w-full bg-slate-800/50 h-2.5 rounded-full p-0.5">
+                        <div class="bg-green-500 h-full rounded-full" style="width: 18%"></div>
+                    </div>
+                </div>
+                <div>
+                    <div class="flex justify-between text-[11px] mb-1 font-bold uppercase text-blue-400">
+                        <span>Protezione (XEON)</span>
+                        <span>82%</span>
+                    </div>
+                    <div class="w-full bg-slate-800/50 h-2.5 rounded-full p-0.5">
+                        <div class="bg-blue-500 h-full rounded-full" style="width: 82%"></div>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <!-- FOOTER CHIARO E LEGGIBILE -->
+        <div class="mt-12 mb-8 p-6 bg-white/5 rounded-[32px] border border-white/10 text-center">
+            <p class="footer-text text-lg font-black uppercase tracking-[0.2em] mb-1">
+                © 2026 SONNY LO PRESTI
+            </p>
+            <p class="text-green-500 text-[10px] font-extrabold uppercase tracking-widest">
+                Amministratore Unico • Green&Gain Project
+            </p>
+        </div>
+    </div>
+
+    <!-- MODALE PAGAMENTI -->
+    <div id="paymentModal" class="modal" onclick="closeModal()">
+        <div class="glass p-8 w-full max-w-sm space-y-6 bg-slate-900 border-yellow-500/30 shadow-2xl" onclick="event.stopPropagation()">
+            <div class="text-center">
+                <h2 class="text-xl font-black uppercase text-white italic tracking-tighter">Acquista Bityours.com</h2>
+                <p class="text-[10px] text-slate-400 mt-2 font-bold uppercase tracking-widest">Contatti e Pagamenti:</p>
+            </div>
+            <div class="space-y-3">
+                <a href="https://revolut.me/lopresti7" target="_blank" class="flex items-center justify-between p-4 rounded-2xl bg-white text-black font-extrabold shadow-lg">
+                   <div class="flex items-center gap-3"><span class="text-xl">💎</span> Revolut</div>
+                   <span class="text-[10px] font-bold">@lopresti7</span>
+                </a>
+                <a href="https://www.paypal.me/NicoCasacci" target="_blank" class="flex items-center justify-between p-4 rounded-2xl bg-[#0070ba] text-white font-extrabold shadow-lg">
+                   <div class="flex items-center gap-3"><span class="text-xl">🅿️</span> PayPal</div>
+                   <span class="text-[10px] font-bold">@NicoCasacci</span>
+                </a>
+                <a href="mailto:nicoaabbcc@gmail.com" class="flex items-center justify-between p-4 rounded-2xl bg-slate-800 text-white font-extrabold shadow-lg">
+                   <div class="flex items-center gap-3"><span class="text-xl">✉️</span> Email Direct</div>
+                   <span class="text-[10px] font-bold">SEND</span>
+                </a>
+            </div>
+            <button onclick="closeModal()" class="w-full text-slate-500 text-[10px] font-black uppercase tracking-[0.3em] pt-4">Chiudi</button>
+        </div>
+    </div>
+
+    <script>
+        function openModal() { document.getElementById('paymentModal').classList.add('active'); }
+        function closeModal() { document.getElementById('paymentModal').classList.remove('active'); }
+    </script>
+</body>
+</html>
 
         <!-- Titolo -->
         <div class="px-2 space-y-1 text-center">
