--- a/index.html
+++ b/index.html
@@ -7,33 +7,177 @@
     <script src="https://cdn.tailwindcss.com"></script>
     <style>
         @import url('https://fonts.googleapis.com/css2?family=Plus+Jakarta+Sans:wght@400;600;800&display=swap');
-        body { background: #0b1120; color: #f8fafc; font-family: 'Plus Jakarta Sans', sans-serif; }
+        body { background: #0b1120; color: #f8fafc; font-family: 'Plus Jakarta Sans', sans-serif; margin: 0; padding: 0; }
         .glass { background: rgba(30, 41, 59, 0.7); backdrop-filter: blur(12px); border: 1px solid rgba(255, 255, 255, 0.05); border-radius: 24px; }
         .gold-button { 
             background: linear-gradient(45deg, #fbbf24, #d97706);
             box-shadow: 0 4px 20px rgba(217, 119, 6, 0.4);
             transition: all 0.2s ease;
         }
-        .modal { display: none; position: fixed; inset: 0; background: rgba(0,0,0,0.9); z-index: 50; align-items: center; justify-content: center; padding: 20px; }
+        .modal { display: none; position: fixed; inset: 0; background: rgba(0,0,0,0.95); z-index: 100; align-items: center; justify-content: center; padding: 20px; }
         .modal.active { display: flex; }
-        /* Forza il bianco per il footer */
-        .footer-text { color: #ffffff !important; opacity: 1 !important; }
+        /* Stile per rendere il nome leggibile e chiarissimo */
+        .footer-highlight { color: #ffffff !important; font-weight: 800 !important; font-size: 1.25rem; letter-spacing: 0.2em; }
     </style>
 </head>
 <body class="p-4 md:p-8">
-    <div class="max-w-md mx-auto space-y-6">
+    <div class="max-w-md mx-auto space-y-6 pb-20">
         
-        <!-- Tasto Gold -->
+        <!-- Tasto Gold Buy -->
         <button onclick="openModal()" class="gold-button w-full py-5 px-6 rounded-3xl flex justify-between items-center text-white border border-yellow-300/30 shadow-2xl">
             <div class="flex flex-col text-left">
                 <span class="text-[10px] uppercase font-extrabold opacity-90 tracking-widest leading-none">Premium Asset</span>
-                <span class="text-xl font-black tracking-tighter uppercase">Buy Bityours.com</span>
+                <span class="text-xl font-black tracking-tighter uppercase">Acquista Bityours.com</span>
             </div>
             <div class="bg-white/20 p-2 rounded-full">
                 <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor">
                     <path stroke-linecap="round" stroke-linejoin="round" stroke-width="3" d="M13 7l5 5m0 0l-5 5m5-5H6" />
                 </svg>
             </div>
+        </button>
+
+        <!-- Titolo e Header Progetto -->
+        <div class="px-2 space-y-2 text-center">
+            <h1 class="text-4xl font-black italic tracking-tighter uppercase text-white leading-none">BITYOURS<span class="text-green-500">.COM</span></h1>
+            <p class="text-green-500 text-[10px] font-black uppercase tracking-[0.3em]">Green&Gain Portfolio</p>
+        </div>
+
+        <!-- Descrizione del Progetto -->
+        <div class="glass p-6 border-l-4 border-l-green-500">
+            <h4 class="text-xs font-black uppercase text-white mb-2 tracking-widest">Il Progetto</h4>
+            <p class="text-[13px] text-slate-300 leading-relaxed italic">
+                Bityours è il diario finanziario del progetto <span class="text-white font-bold">Green&Gain</span>. 
+                Utilizziamo il piano d'azione <span class="text-green-400 font-bold uppercase">Ultimate Bond/world</span> per costruire una sovranità finanziaria solida, bilanciando la sicurezza dei titoli di stato con l'innovazione del mercato azionario globale.
+            </p>
+        </div>
+
+        <!-- Capitale Totale -->
+        <div class="glass p-8 text-center shadow-2xl flex flex-col items-center">
+            <h3 class="text-slate-400 text-[10px] font-bold uppercase tracking-[0.3em] mb-1">Capitale Investito</h3>
+            <p class="text-5xl font-black text-white leading-tight italic">€ 426,50</p>
+            <div class="flex justify-center gap-4 mt-3 text-[10px] font-bold text-slate-400 uppercase tracking-tighter">
+                <span>Credem: € 200</span>
+                <span>•</span>
+                <span>Trade Rep: € 226,50</span>
+            </div>
+        </div>
+
+        <!-- Obiettivo Asset Allocation (Target 55/30/15) -->
+        <div class="glass p-6 space-y-5 border-t border-white/5">
+            <div class="flex justify-between items-end border-b border-white/10 pb-2">
+                <h2 class="text-xs font-bold text-white uppercase tracking-widest italic font-black">Obiettivo Portfolio</h2>
+                <span class="text-[10px] text-green-500 font-black italic">Target: 55/30/15</span>
+            </div>
+            
+            <div class="space-y-4">
+                <!-- Crescita -->
+                <div>
+                    <div class="flex justify-between text-[11px] mb-1 font-bold uppercase">
+                        <span class="text-green-400">Growth (Obiettivo 55%)</span>
+                        <span class="text-white">In Corso (18%)</span>
+                    </div>
+                    <div class="w-full bg-slate-800/50 h-2 rounded-full overflow-hidden">
+                        <div class="bg-green-500 h-full rounded-full" style="width: 18%"></div>
+                    </div>
+                </div>
+
+                <!-- Protezione -->
+                <div>
+                    <div class="flex justify-between text-[11px] mb-1 font-bold uppercase">
+                        <span class="text-blue-400">Defense (Obiettivo 30%)</span>
+                        <span class="text-white">Coperto (82%)</span>
+                    </div>
+                    <div class="w-full bg-slate-800/50 h-2 rounded-full overflow-hidden">
+                        <div class="bg-blue-500 h-full rounded-full" style="width: 82%"></div>
+                    </div>
+                </div>
+
+                <!-- Dividendi -->
+                <div>
+                    <div class="flex justify-between text-[11px] mb-1 font-bold uppercase">
+                        <span class="text-yellow-500/60">Dividend (Obiettivo 15%)</span>
+                        <span class="text-slate-500 italic">Fase 3 Attesa</span>
+                    </div>
+                    <div class="w-full bg-slate-800/50 h-2 rounded-full opacity-20"></div>
+                </div>
+            </div>
+        </div>
+
+        <!-- FOOTER - LEGGIBILE E CHIARO -->
+        <div class="mt-12 p-8 bg-white/5 rounded-[32px] border border-white/10 text-center shadow-2xl">
+            <p class="footer-highlight uppercase mb-2">
+                © 2026 SONNY LO PRESTI
+            </p>
+            <div class="h-px w-20 bg-green-500 mx-auto mb-4"></div>
+            <p class="text-green-500 text-[11px] font-black uppercase tracking-[0.2em]">
+                Amministratore Unico • Green&Gain Project
+            </p>
+        </div>
+    </div>
+
+    <!-- MODALE PAGAMENTI -->
+    <div id="paymentModal" class="modal" onclick="closeModal()">
+        <div class="glass p-8 w-full max-w-sm space-y-6 bg-slate-900 border-yellow-500/30 shadow-2xl" onclick="event.stopPropagation()">
+            <div class="text-center">
+                <h2 class="text-xl font-black uppercase text-white italic tracking-tighter">Acquista Bityours.com</h2>
+                <p class="text-[10px] text-slate-400 mt-2 font-bold uppercase tracking-widest">Scegli il metodo:</p>
+            </div>
+
+            <div class="space-y-3">
+                <a href="https://revolut.me/lopresti7" target="_blank" class="flex items-center justify-between p-4 rounded-2xl bg-white text-black font-extrabold shadow-lg">
+                   <div class="flex items-center gap-3"><span class="text-xl">💎</span> Revolut</div>
+                   <span class="text-[10px] font-bold uppercase">@lopresti7</span>
+                </a>
+
+                <a href="https://www.paypal.me/NicoCasacci" target="_blank" class="flex items-center justify-between p-4 rounded-2xl bg-[#0070ba] text-white font-extrabold shadow-lg">
+                   <div class="flex items-center gap-3"><span class="text-xl">🅿️</span> PayPal</div>
+                   <span class="text-[10px] font-bold uppercase">@NicoCasacci</span>
+                </a>
+
+                <a href="mailto:nicoaabbcc@gmail.com" class="flex items-center justify-between p-4 rounded-2xl bg-slate-800 text-white font-extrabold shadow-lg">
+                   <div class="flex items-center gap-3"><span class="text-xl">✉️</span> Email Direct</div>
+                   <span class="text-[10px] font-bold uppercase text-white">Invia</span>
+                </a>
+            </div>
+
+            <button onclick="closeModal()" class="w-full text-slate-500 text-[10px] font-black uppercase tracking-[0.3em] pt-4">Torna alla Dashboard</button>
+        </div>
+    </div>
+
+    <script>
+        function openModal() { document.getElementById('paymentModal').classList.add('active'); }
+        function closeModal() { document.getElementById('paymentModal').classList.remove('active'); }
+    </script>
+</body>
+</html>
+
+                <a href="https://revolut.me/lopresti7" target="_blank" class="flex items-center justify-between p-4 rounded-2xl bg-white text-black font-extrabold shadow-lg">
+                   <div class="flex items-center gap-3"><span class="text-xl">💎</span> Revolut</div>
+                   <span class="text-[10px] font-bold uppercase">@lopresti7</span>
+                </a>
+
+                <a href="https://www.paypal.me/NicoCasacci" target="_blank" class="flex items-center justify-between p-4 rounded-2xl bg-[#0070ba] text-white font-extrabold shadow-lg">
+                   <div class="flex items-center gap-3"><span class="text-xl">🅿️</span> PayPal</div>
+                   <span class="text-[10px] font-bold uppercase">@NicoCasacci</span>
+                </a>
+
+                <a href="mailto:nicoaabbcc@gmail.com" class="flex items-center justify-between p-4 rounded-2xl bg-slate-800 text-white font-extrabold shadow-lg">
+                   <div class="flex items-center gap-3"><span class="text-xl">✉️</span> Email</div>
+                   <span class="text-[10px] font-bold uppercase text-white">Send</span>
+                </a>
+            </div>
+
+            <button onclick="closeModal()" class="w-full text-slate-500 text-[10px] font-black uppercase tracking-[0.3em] pt-4">Chiudi</button>
+        </div>
+    </div>
+
+    <script>
+        function openModal() { document.getElementById('paymentModal').classList.add('active'); }
+        function closeModal() { document.getElementById('paymentModal').classList.remove('active'); }
+    </script>
+</body>
+</html>
+
         </button>
 
         <!-- Titolo -->
