--- a/index.html
+++ b/index.html
@@ -3,22 +3,33 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Bityours.com | Green&Gain</title>
+    <title>Bityours.com | Green&Gain Portfolio</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <style>
         @import url('https://fonts.googleapis.com/css2?family=Plus+Jakarta+Sans:wght@400;700;800&display=swap');
         body { background-color: #020617; color: #ffffff; font-family: 'Plus Jakarta Sans', sans-serif; margin: 0; }
         .glass { background: rgba(30, 41, 59, 0.5); backdrop-filter: blur(12px); border: 1px solid rgba(255, 255, 255, 0.1); border-radius: 24px; }
-        .gold-btn { background: linear-gradient(135deg, #fbbf24 0%, #d97706 100%); shadow: 0 4px 20px rgba(217, 119, 6, 0.4); }
+        .gold-btn { background: linear-gradient(135deg, #fbbf24 0%, #d97706 100%); }
+        [lang="en"] { display: none; }
+        body.lang-en [lang="it"] { display: none; }
+        body.lang-en [lang="en"] { display: block; }
     </style>
 </head>
 <body class="p-4 flex flex-col items-center">
-    <div class="max-w-md w-full space-y-6">
+    <div class="max-w-md w-full space-y-6 pb-10">
         
-        <!-- Link Diretto Afternic -->
+        <!-- Selettore Lingua -->
+        <div class="flex justify-end gap-2 text-[10px] font-bold uppercase tracking-widest">
+            <button onclick="document.body.classList.remove('lang-en')" class="hover:text-green-500 transition">IT</button>
+            <span class="opacity-30">|</span>
+            <button onclick="document.body.classList.add('lang-en')" class="hover:text-green-500 transition">EN</button>
+        </div>
+
+        <!-- Link Afternic -->
         <a href="https://www.afternic.com/domains/bityours.com" target="_blank" class="gold-btn w-full py-5 rounded-2xl text-white font-extrabold uppercase italic flex flex-col items-center no-underline transition transform active:scale-95">
-            <span class="text-[10px] opacity-90 not-italic tracking-widest mb-1">In vendita su Afternic</span>
-            <span class="text-xl">ACQUISTA BITYOURS.COM</span>
+            <span lang="it" class="text-[10px] opacity-90 not-italic tracking-widest mb-1 font-bold">In vendita su Afternic</span>
+            <span lang="en" class="text-[10px] opacity-90 not-italic tracking-widest mb-1 font-bold">For sale on Afternic</span>
+            <span class="text-xl">BUY BITYOURS.COM</span>
         </a>
 
         <!-- Logo -->
@@ -29,41 +40,63 @@
 
         <!-- Box Progetto -->
         <div class="glass p-6 border-l-4 border-green-500">
-            <p class="text-sm leading-relaxed text-slate-200">
-                Il progetto <span class="text-white font-bold">Green&Gain</span> segue la strategia <span class="italic text-white">"Ultimate Bond/world"</span>. Un asset digitale unico che unisce un dominio premium a un diario finanziario attivo.
-            </p>
+            <div lang="it">
+                <p class="text-sm leading-relaxed text-slate-200">
+                    Il progetto <span class="text-white font-bold">Green&Gain</span> segue la strategia <span class="italic text-white">"Ultimate Bond/world"</span>. Un asset digitale unico che unisce un dominio premium a un diario finanziario attivo.
+                </p>
+            </div>
+            <div lang="en">
+                <p class="text-sm leading-relaxed text-slate-200">
+                    The <span class="text-white font-bold">Green&Gain</span> project follows the <span class="italic text-white">"Ultimate Bond/world"</span> strategy. A unique digital asset combining a premium domain with an active financial diary.
+                </p>
+            </div>
         </div>
 
         <!-- Capitale -->
         <div class="glass p-8 text-center border-b-2 border-green-500">
-            <span class="text-[10px] text-slate-500 uppercase font-black tracking-widest">Capitale Investito</span>
-            <div class="text-5xl font-extrabold mt-1 italic italic tracking-tighter text-white">€ 426,50</div>
+            <span lang="it" class="text-[10px] text-slate-500 uppercase font-black tracking-widest">Capitale Investito</span>
+            <span lang="en" class="text-[10px] text-slate-500 uppercase font-black tracking-widest">Invested Capital</span>
+            <div class="text-5xl font-extrabold mt-1 italic tracking-tighter text-white">€ 426,50</div>
         </div>
 
         <!-- Target -->
         <div class="glass p-6 space-y-4">
             <div class="flex justify-between items-center border-b border-white/10 pb-2">
-                <span class="text-xs font-black uppercase italic">Target Portfolio</span>
+                <span lang="it" class="text-xs font-black uppercase italic">Target Portfolio</span>
+                <span lang="en" class="text-xs font-black uppercase italic">Portfolio Target</span>
                 <span class="text-green-500 font-black italic">55 / 30 / 15</span>
             </div>
-            <div class="space-y-4">
+            <div class="space-y-4 font-bold text-[11px]">
                 <div>
-                    <div class="flex justify-between text-[11px] font-bold mb-1"><span class="text-green-400">CRESCITA (55%)</span><span>18%</span></div>
-                    <div class="w-full bg-slate-900 h-2 rounded-full"><div class="bg-green-500 h-full rounded-full" style="width: 18%"></div></div>
+                    <div class="flex justify-between mb-1">
+                        <span class="text-green-400 uppercase" lang="it">CRESCITA (55%)</span>
+                        <span class="text-green-400 uppercase" lang="en">GROWTH (55%)</span>
+                        <span>18%</span>
+                    </div>
+                    <div class="w-full bg-slate-900 h-2 rounded-full overflow-hidden">
+                        <div class="bg-green-500 h-full rounded-full" style="width: 18%"></div>
+                    </div>
                 </div>
                 <div>
-                    <div class="flex justify-between text-[11px] font-bold mb-1"><span class="text-blue-400">PROTEZIONE (30%)</span><span>82%</span></div>
-                    <div class="w-full bg-slate-900 h-2 rounded-full"><div class="bg-blue-500 h-full rounded-full" style="width: 82%"></div></div>
+                    <div class="flex justify-between mb-1">
+                        <span class="text-blue-400 uppercase" lang="it">PROTEZIONE (30%)</span>
+                        <span class="text-blue-400 uppercase" lang="en">PROTECTION (30%)</span>
+                        <span>82%</span>
+                    </div>
+                    <div class="w-full bg-slate-900 h-2 rounded-full overflow-hidden">
+                        <div class="bg-blue-500 h-full rounded-full" style="width: 82%"></div>
+                    </div>
                 </div>
             </div>
         </div>
 
-        <!-- Nome Sonny Bianco Puro -->
+        <!-- Firma -->
         <footer class="text-center pt-10">
             <p style="color: #ffffff !important;" class="text-2xl font-extrabold tracking-[0.2em] uppercase mb-1">
                 © 2026 SONNY LO PRESTI
             </p>
-            <p class="text-green-500 text-[10px] font-black uppercase tracking-widest">Amministratore Unico</p>
+            <p lang="it" class="text-green-500 text-[10px] font-black uppercase tracking-widest">Amministratore Unico</p>
+            <p lang="en" class="text-green-500 text-[10px] font-black uppercase tracking-widest">Managing Director</p>
         </footer>
     </div>
 </body>
